# baamanga

./: .Baamanga.geany  .baamanga.cbp  .baamanga.depend  .baamanga.layout  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  baamanga  baamanga.c  baamanga.cbp  changelog  config.status  configure  configure.ac
Pruebas/: htmltidy.c  poco_simple.c  prueba.c  prueba2.c  sepheaders.c
autom4te.cache/: output.0  requests  traces.0  traces.1
doxygen/: doxyfile
include/: BmHelpers.h  DirsChecks.h  Downloader.h  ExceptionConstants.h  FileManager.h  FileReader.h  FileWriter.h  Properties.h  Strings.h  Trimmer.h  download.h  services.h  strings.h
intl/: de.po  es.po  fr.po  it.po
po/: ca.po  de.po  es.po  it.po
src/: Baamanga.cpp  BmHelpers.cpp  DirsChecks.cpp  Downloader.cpp  FileReader.cpp  FileWriter.cpp  Makefile  Makefile.am  Makefile.in  Properties.cpp  Strings.cpp  animea.c  animea.cpp  baamanga  baamanga (copia 1).c  baamanga.c  baamanga.cpp  bmhelp.c  bmhelp.cpp  bmopt.c  bmopt.cpp  bmver.c  bmver.cpp  checking.c  danboru.c  danboru.cpp  dirs_check.c  dirs_check.cpp  downdir_check.c  downloads.cpp  ehentai.c  ehentai.cpp  futahentai.c  futahentai.cpp  geany_run_script.sh  mangaeden.cpp  mangafox.c  mangafox.cpp  mangahead.cpp  mangahere.c  (+16 more)
src/.deps/: animea.Po  baamanga.Po  bmhelp.Po  bmopt.Po  bmver.Po  danboru.Po  dirs_check.Po  ehentai.Po  futahentai.Po  mangafox.Po  mangahere.Po  mangareader.Po  mangashare.Po  pown.Po  submanga.Po  write_data.Po  zerochan.Po
src/test/: checking.c (useless by now)
