AM_CXXFLAGS = -Wall -std=c++11 -lcurlcpp -lcurl -lboost_filesystem -lboost_system -I ../include
AM_CPPFLAGS = -DLOCALEDIR='"$(localedir)"'
bin_PROGRAMS=baamanga
baamanga_SOURCES=animea.cpp baamanga.cpp bmhelp.cpp bmopt.cpp bmver.cpp danboru.cpp dirs_check.cpp downloads.cpp ehentai.cpp futahentai.cpp mangaeden.cpp mangafox.cpp mangahead.cpp mangahere.cpp mangareader.cpp mangashare.cpp pown.cpp strings.cpp submanga.cpp wiemanga.cpp zerochan.cpp